--- a/CompetitionSimulation/CompetitionSimulation.csproj
+++ b/CompetitionSimulation/CompetitionSimulation.csproj
@@ -43,14 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithm\Algorithm.cs" />
+    <Compile Include="Algorithm\PrimitiveAlgorithm.cs" />
     <Compile Include="Basket.cs" />
+    <Compile Include="Algorithm\IAlgorithm.cs" />
     <Compile Include="IBasket.cs" />
     <Compile Include="IMatch.cs" />
+    <Compile Include="IRound.cs" />
     <Compile Include="ITeam.cs" />
     <Compile Include="Match.cs" />
     <Compile Include="MatchState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Round.cs" />
     <Compile Include="Team.cs" />
   </ItemGroup>
   <ItemGroup>
