Drobne upravy a pokracovani

--- a/CompetitionSimulation/CompetitionSimulation.csproj
+++ b/CompetitionSimulation/CompetitionSimulation.csproj
@@ -47,7 +47,10 @@
     <Compile Include="Algorithm\PrimitiveAlgorithm.cs" />
     <Compile Include="Basket.cs" />
     <Compile Include="Algorithm\IAlgorithm.cs" />
+    <Compile Include="CompetitionTable\TeamResult.cs" />
+    <Compile Include="CompetitionTable\CompetitionThreeTable.cs" />
     <Compile Include="IBasket.cs" />
+    <Compile Include="CompetitionTable\ICompetitionTable.cs" />
     <Compile Include="IMatch.cs" />
     <Compile Include="IRound.cs" />
     <Compile Include="ITeam.cs" />
