--- a/CompetitionSimulation/CompetitionSimulation.csproj
+++ b/CompetitionSimulation/CompetitionSimulation.csproj
@@ -45,11 +45,11 @@
   <ItemGroup>
     <Compile Include="Algorithm\Algorithm.cs" />
     <Compile Include="Algorithm\PrimitiveAlgorithm.cs" />
-    <Compile Include="BasketSix.cs" />
+    <Compile Include="Baskets\BasketSix.cs" />
     <Compile Include="Algorithm\IAlgorithm.cs" />
     <Compile Include="Tables\TeamResult.cs" />
     <Compile Include="Tables\CompetitionTable.cs" />
-    <Compile Include="IBasket.cs" />
+    <Compile Include="Baskets\IBasket.cs" />
     <Compile Include="Tables\ICompetitionTable.cs" />
     <Compile Include="IMatch.cs" />
     <Compile Include="IRound.cs" />
