--- a/CompetitionSimulation/CompetitionSimulation.csproj
+++ b/CompetitionSimulation/CompetitionSimulation.csproj
@@ -43,10 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Algorithm\Algorithm.cs" />
-    <Compile Include="Algorithm\PrimitiveAlgorithm.cs" />
+    <Compile Include="Algorithms\Algorithm.cs" />
+    <Compile Include="Algorithms\PrimitiveAlgorithm.cs" />
     <Compile Include="Baskets\PrimitiveBasketSix.cs" />
-    <Compile Include="Algorithm\IAlgorithm.cs" />
+    <Compile Include="Algorithms\IAlgorithm.cs" />
     <Compile Include="Tables\TeamResult.cs" />
     <Compile Include="Tables\CompetitionTable.cs" />
     <Compile Include="Baskets\IBasket.cs" />
