--- a/CompetitionSimulationTest/CompetitionSimulationTest.csproj
+++ b/CompetitionSimulationTest/CompetitionSimulationTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Algorithms\PrimitiveAlgorithmTests.cs" />
+    <Compile Include="Baskets\PrimitiveBasketSixTests.cs" />
     <Compile Include="Baskets\BasketSixTests.cs" />
     <Compile Include="Tables\CompetitionTableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
