--- a/CompetitionSimulation/CompetitionSimulation.csproj
+++ b/CompetitionSimulation/CompetitionSimulation.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\Algorithm.cs" />
-    <Compile Include="Algorithms\PrimitiveAlgorithm - Copy.cs" />
+    <Compile Include="Algorithms\OrganizerPriorityAlgorithm.cs" />
     <Compile Include="Algorithms\PrimitiveAlgorithm.cs" />
     <Compile Include="Baskets\BasketSix.cs" />
     <Compile Include="Baskets\Basket.cs" />
