--- a/CompetitionSimulationTest/CompetitionSimulationTest.csproj
+++ b/CompetitionSimulationTest/CompetitionSimulationTest.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Algorithms\OrganizerPriorityAlgorithmTests.cs" />
     <Compile Include="Algorithms\PrimitiveAlgorithmTests.cs" />
     <Compile Include="Baskets\PrimitiveBasketSixTests.cs" />
     <Compile Include="Baskets\BasketSixTests.cs" />
