--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -98,6 +98,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CompetitionSimulation\CompetitionSimulation.csproj">
+      <Project>{0b74a5d1-40c6-4dba-b9b8-055138487c35}</Project>
+      <Name>CompetitionSimulation</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
